--- a/hrithvika/bin/hrithvika.dll.config
+++ b/hrithvika/bin/hrithvika.dll.config
@@ -69,7 +69,7 @@
       <add name="MySQL Data Provider" invariant="MySql.Data.MySqlClient" description=".Net Framework Data Provider for MySQL" type="MySql.Data.MySqlClient.MySqlClientFactory, MySql.Data, Version=6.10.9.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d" />
     </DbProviderFactories>
   </system.data>
-  <system.webServer>
+  <!--<system.webServer>
     <rewrite>
       <rules>
         <rule name="HTTP to HTTPS redirect" stopProcessing="true">
@@ -81,7 +81,7 @@
         </rule>
       </rules>
     </rewrite>
-  </system.webServer>
+  </system.webServer>-->
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
